--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="https://www.thymeleaf.org"
 >Регистрация<head>
-    <title>Spring Security Example </title>
+    <title>Online Password Manager</title>
 </head>
 <body>
 <div th:if="${message}">
